# rsudo

./: .gitignore  Cargo.toml  README.md  clippy.toml
.github/workflows/: ci.yml
docs/: PLAN.md  SPEC.md
rsudo-cli/: Cargo.toml
rsudo-cli/src/: args.rs  config.rs  exec.rs  login.rs  main.rs  request.rs  session.rs
rsudo-core/: Cargo.toml
rsudo-core/src/: config.rs  crypto.rs  lib.rs  ssr.rs  types.rs
rsudo-server/: Cargo.toml
rsudo-server/src/: main.rs
