[workspace]
resolver = "2"
members = [
    "rsudo-core",
    "rsudo-cli",
    "rsudo-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["rsudo contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cardil/rsudo"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client/server
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
axum = "0.7"

# Cryptography
ring = "0.17"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
base64 = "0.22"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5"
thiserror = "1"
