[package]
name = "rsudo-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rsudo"
path = "src/main.rs"

[dependencies]
rsudo-core = { path = "../rsudo-core" }
tokio.workspace = true
reqwest.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
