[package]
name = "rsudo-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rsudo"
path = "src/main.rs"

[dependencies]
rsudo-core = { path = "../rsudo-core" }
tokio.workspace = true
reqwest.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
dirs.workspace = true
thiserror.workspace = true
base64.workspace = true
chrono = { version = "0.4", features = ["serde"] }
webbrowser = "1.0"
hostname = "0.4"
