[package]
name = "rsudo-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ed25519-dalek.workspace = true
rand.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
base64.workspace = true
uuid.workspace = true
dirs.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
