[package]
name = "rsudo-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rsudo-server"
path = "src/main.rs"

[dependencies]
rsudo-core = { path = "../rsudo-core" }
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
